[gd_scene load_steps=16 format=3 uid="uid://h1w2l3xtndng"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cmjvqogkvxx1j" path="res://assets/sprites/drop_window.png" id="2"]
[ext_resource type="Texture2D" uid="uid://psifyt0nybhg" path="res://assets/sprites/logo.png" id="3"]
[ext_resource type="Theme" uid="uid://dbxmhut0taak5" path="res://themes/default_text.tres" id="4"]
[ext_resource type="PackedScene" path="res://components/fade_transition.tscn" id="5"]
[ext_resource type="AudioStream" uid="uid://bm1ky8jaexn1d" path="res://assets/sound effects/main_menu_ambience.mp3" id="6"]
[ext_resource type="Script" path="res://scripts/audio_with_delay.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://hsji317svkkh" path="res://assets/sprites/pod_cropped.png" id="8"]

[sub_resource type="Animation" id="1"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Press:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="2"]
resource_name = "fade_between"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Press:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1.1, 2),
"transitions": PackedFloat32Array(1, 3.73213, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.176471), Color(1, 1, 1, 0.447059), Color(1, 1, 1, 0.101961)]
}

[sub_resource type="AnimationLibrary" id="3"]
_data = {
"RESET": SubResource("1"),
"fade_between": SubResource("2")
}

[sub_resource type="Animation" id="4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-15.0]
}

[sub_resource type="Animation" id="5"]
resource_name = "music_fade"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.97),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-15.0, -50.0]
}

[sub_resource type="AnimationLibrary" id="6"]
_data = {
"RESET": SubResource("4"),
"music_fade": SubResource("5")
}

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(1199, 686)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
offset_left = -256.0
offset_top = -148.0
offset_right = 1421.0
offset_bottom = 778.0
color = Color(0, 0, 0, 1)

[node name="DropWindow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.666667)
position = Vector2(578, 330)
scale = Vector2(2.62739, 2.62739)
texture = ExtResource("2")

[node name="Logo" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.45098)
position = Vector2(588, 259)
scale = Vector2(2.66981, 2.66981)
texture = ExtResource("3")

[node name="Press" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 311.0
offset_top = 365.0
offset_right = 869.0
offset_bottom = 432.0
theme = ExtResource("4")
theme_override_colors/font_color = Color(1, 1, 1, 0.772549)
theme_override_font_sizes/font_size = 64
text = "Press anywhere to start"

[node name="IdleAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("3")
}

[node name="MusicAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("6")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(578, 330)
shape = SubResource("7")

[node name="FadeTransition" parent="." instance=ExtResource("5")]
position = Vector2(-1, -11)
fade_speed = 0.4

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")
volume_db = -15.0
script = ExtResource("7")

[node name="PodCropped" type="Sprite2D" parent="."]
position = Vector2(672, 701)
texture = ExtResource("8")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
